--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "@fontsource/roboto": "^4.5.5",
+    "date-fns": "^2.28.0",
     "framer-motion": "^6",
     "react": "^18.0.0",
+    "react-datepicker": "^4.7.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
+    "@types/react-datepicker": "^4.4.0",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
     "typescript": "^4.6.3",
