chore: config assignment

--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "@chakra-ui/react": "^1.8.8",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "@fontsource/arizonia": "^4.5.6",
+    "@fontsource/clicker-script": "^4.5.7",
+    "@fontsource/licorice": "^4.5.5",
+    "@fontsource/mr-de-haviland": "^4.5.6",
     "@fontsource/roboto": "^4.5.5",
     "date-fns": "^2.28.0",
     "framer-motion": "^6",
