--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,6 +15,7 @@ jobs:
           node-version: "14.x"
       - name: Build web-app
         run: |
+          npm install
           npm run build
       - name: Deploy to github-deploy
         uses: peaceiris/actions-gh-pages@v3
