--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react": "^17.0.0",
     "react-datepicker": "^4.7.0",
     "react-dom": "^17.0.0",
-    "react-router-dom": "^6.3.0"
+    "react-router-dom": "^6.3.0",
+    "react-to-pdf": "^0.0.14"
   },
   "devDependencies": {
     "@types/react": "^17.0.0",
