--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fontsource/mr-de-haviland": "^4.5.6",
     "@fontsource/roboto": "^4.5.5",
     "date-fns": "^2.28.0",
+    "firebase": "^9.6.10",
     "framer-motion": "^6",
     "fs-browsers": "^1.1.6",
     "html2canvas": "^1.4.1",
